# Z-Source

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  debug.txt  eslint.config.js  guia-baseball.md  index.html  package-lock.json  package.json  strategy.txt  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vitest.config.ts
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  performance.json  security-audit.json  swarm-activity.json  test-gaps.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.design-incoming/chats/: chat1.md
.design-incoming/project/: .design-canvas.state.json  UI-UX Proposal.html  matchup-frames.jsx  picks-frames.jsx
.github/workflows/: ci.yml  release.yml
.gsd/: ARCHITECTURE.md  DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md  TODO.md
.swarm/: memory.db-shm  memory.db-wal  schema.sql  state.json
design_handoff_multi_sport/: README.md
design_handoff_multi_sport/prototype/: Multi-Sport Scanner.html  Multi-Sport Switcher.html  chrome.jsx  scanner.jsx  sports.js  switcher-app.jsx  tokens.css
scripts/: an-api-probe.console.js  download-flaresolverr.js  sofa-probe.console.js
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml
src-tauri/.cargo/: config.toml
src-tauri/app-desktop/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/app-desktop/capabilities/: default.json  sidecar.json  sofa-proxy.json
src-tauri/app-desktop/icons/: icon.icns
src-tauri/app-desktop/src/: lib.rs  main.rs
src-tauri/scraper-bot/: Cargo.toml
src-tauri/scraper-bot/src/: fbref.rs  fixtures.rs  league_crawler.rs  main.rs  match_stats.rs  team_schedule.rs
src-tauri/shared-lib/: Cargo.toml
src-tauri/shared-lib/src/: analysis.rs  db.rs  fixtures.rs  flare_solverr.rs  lib.rs  match_stats.rs  team_schedule.rs
src/backtest/: contextBuilder.ts  outcomeResolver.test.ts  outcomeResolver.ts  runner.ts
src/components/: AnalysisResults.tsx  MatchCard.tsx  Navigation.tsx  OnboardingDialog.tsx  PickAnalyzerForm.tsx
src/config/: leagues.ts  markets.ts  sportIcons.tsx  sports.ts
src/domain/: bankroll.ts  baseball.ts  bet.ts  history.ts  ids.ts  index.ts  market.ts  match.ts  odds.ts  play.ts  splits.ts  strategy.ts  tennis.ts  trace.ts
src/engine/: combine.test.ts  combine.ts  combos.test.ts  combos.ts  context.ts  ev.test.ts  ev.ts  index.ts  pipeline.test.ts  pipeline.ts  stake.test.ts  stake.ts  types.ts
src/layouts/: AppShell.tsx  Sidebar.tsx  SportRail.tsx  Ticker.tsx  Topbar.tsx
supabase/: config.toml
(+323 files in other folders)
