[package]
name = "lyratip-tauri"
version = "0.1.0"
description = "LyraTip Command Center desktop"
authors = ["LyraTip"]
edition = "2021"

[features]
default = []

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.2", features = [] }
shared-lib = { path = "../shared-lib" }
rusqlite = { version = "0.29", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
strip = "symbols"
