[package]
name = "z-source-desktop"
version = "0.1.0"
description = "Z-Source Desktop"
authors = []
edition = "2021"

[lib]
name = "z_source_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"

[profile.release]
panic = "abort"
codegen-units = 1
strip = "symbols"
