[package]
name = "scraper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = { version = "1.0", features = ["fetch"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
shared-lib = { path = "../shared-lib" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
rusqlite = { version = "0.29", features = ["bundled"] }
