[package]
name = "shared-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
anyhow = "1.0"
headless_chrome = { version = "1.0", features = ["fetch"] }
rand = "0.8"
regex = "1.10"
